--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
     <div>
         <img src="02.jpg" alt="02pr">
     </div>
+    <div>
+        <video width="320" height="240" autoplay muted>
+            <source src="1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+    </div>
 </body>
 </html>
