--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
             <li><a class="button" href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <div class="pr1">
+    <div class="pr">
         <img src="1.jpg">
         <pre>តុក្កតាតាំងលើតុ
      តម្លៃ: 2$
         </pre>
     </div>
-    <div>
+    <div class=pr>
         <img src="02.jpg" alt="02pr">
-    </div>
+    </div class="pr">
     <div>
-        <video width="320" height="240" autoplay muted>
-            <source src="1.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
+        <video controls width="200">  
+            <source src="1.mp4" type="video/mp4">  
+           Your browser does not support the html video tag.  
+         </video>  
+    </div>
     </div>
 </body>
 </html>
